fix: colorpicker CSS style not applying on Firefox

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,8 @@ body {
 }
 
 
-.settings__colorpicker::-webkit-color-swatch {
+.settings__colorpicker::-webkit-color-swatch, 
+.settings__colorpicker::-moz-color-swatch {
     border: none;
     border-radius: 100%;
     box-shadow: 0 0.1em 0.3em rgb(0, 0, 0, 0.3);
